# advanced-budget

./: .gitignore  CMakeLists.txt  README.md
client/application/: package-lock.json  package.json
client/application/src/: App.css  App.tsx
client/application/src/api/: addExpense.tsx
client/application/src/components/: AppWrapper.tsx  Chart.tsx  Modal.tsx  Table.tsx
client/application/src/state/: store.tsx
client/application/src/state/slices/: data.tsx  user.tsx
include/: log.hpp
include/database/: connection_pool.hpp
include/server/: router.hpp  routes.hpp  server.hpp  session.hpp
src/: main.cpp
src/database/: connection_pool.cpp  setup  setup.cpp
src/server/: router.cpp  routes.cpp  server.cpp  session.cpp
